doc/grammar.bnf
expression -> ternary ;
   ternary -> equality '?' equality ":" expression ;
  equality -> comparison ( ( '==' | '!=' ) comparison )* ;
comparison -> term ( ( "<" | "<=" | ">" | ">=") term )* ;
      term -> factor ( ( "+" | "-" ) factor )* ;
    factor -> unary ( ( "*" | "/" ) unary)* ;
     unary -> ("!" | "-") unary | primary ;
   primary -> NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" ;
